# Document_Parser_using_RAG

./: README.md
.devcontainer/: devcontainer.json
Document_Parser/: .gitignore  README.md  pyproject.toml  rag_backend.py  rag_frontend_st.py
